[package]
name         = "cryptobox"
version      = "1.0.0"
authors      = ["Wire Swiss GmbH <support@wire.com>"]
description  = "High-level API for proteus with persistent storage."
homepage     = "https://github.com/sd166/cryptobox"
repository   = "git@github.com:sd166/cryptobox.git"
license      = "GPL-3.0"

[dependencies]
byteorder  = ">= 0.5.1"
cbor-codec = ">= 0.7.0"
proteus    = { git = "https://github.com/sd166/proteus", tag = "v1.0.0" }

